--- a/SignIn.css
+++ b/SignIn.css
@@ -4,7 +4,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 body 
 {
@@ -40,8 +40,8 @@ body
 {
 	position: relative;
 	width: 380px;
-	height: 420px;
-	background: #1c1c1c;
+	height: 40rem;
+	background: rgba(0,0,0,0.1);
 	border-radius: 8px;
 	overflow: hidden;
 }
@@ -53,9 +53,9 @@ body
 	top: -50%;
 	left: -50%;
 	width: 380px;
-	height: 420px;
+	height: 40rem;
 	transform-origin: bottom right;
-	background: linear-gradient(0deg,transparent,#45f3ff,#45f3ff);
+	background: linear-gradient(0deg,transparent,#E50914,#E50914);
 	animation: animate 6s linear infinite;
 }
 .box::after 
@@ -66,9 +66,9 @@ body
 	top: -50%;
 	left: -50%;
 	width: 380px;
-	height: 420px;
+	height: 40rem;
 	transform-origin: bottom right;
-	background: linear-gradient(0deg,transparent,#45f3ff,#45f3ff);
+	background: linear-gradient(0deg,transparent,#E50914,#E50914);
 	animation: animate 6s linear infinite;
 	animation-delay: -3s;
 }
@@ -87,7 +87,7 @@ form
 {
 	position: absolute;
 	inset: 2px;
-	background: #28292d;
+	background: rgba(0,0,0,0.5);
 	padding: 50px 40px;
 	border-radius: 8px;
 	z-index: 2;
@@ -96,8 +96,8 @@ form
 }
 h2 
 {
-	color: #45f3ff;
-	font-weight: 500;
+	color: #E50914;
+	font-weight: 700;
 	text-align: center;
 	letter-spacing: 0.1em;
 }
@@ -136,7 +136,7 @@ h2
 .inputBox input:valid ~ span,
 .inputBox input:focus ~ span 
 {
-	color: #45f3ff;
+	color: #E50914;
 	transform: translateX(0px) translateY(-34px);
 	font-size: 0.75em;
 }
@@ -147,7 +147,7 @@ h2
 	bottom: 0;
 	width: 100%;
 	height: 2px;
-	background: #45f3ff;
+	background: #E50914;
 	border-radius: 4px;
 	overflow: hidden;
 	transition: 0.5s;
@@ -171,24 +171,49 @@ h2
 	color: #8f8f8f;
 	text-decoration: beige;
 }
-.links a:hover, 
-.links a:nth-child(2)
+.links a:hover
 {
-	color: #45f3ff;
+	color: #E50914;
 }
 input[type="submit"]
 {
 	border: none;
 	outline: none;
 	padding: 11px 25px;
-	background: #45f3ff;
+	background: #E50914;
 	cursor: pointer;
+	color: white;
+	font-weight: 100;
 	border-radius: 4px;
 	font-weight: 600;
-	width: 100px;
+	width: 100%;
 	margin-top: 10px;
 }
 input[type="submit"]:active 
 {
 	opacity: 0.8;
+}
+
+@media only screen and (max-width: 1000px){
+
+.box {
+	width: 380px;
+	height: 40rem;
+	
+}
+.box::before 
+{
+	
+	width: 380px;
+	height: 40rem;
+
+}
+.box::after 
+{
+	
+	width: 380px;
+	height: 40rem;
+	
+}
+
 }
