signin form changes

--- a/SignIn.css
+++ b/SignIn.css
@@ -96,9 +96,9 @@ form
 }
 h2 
 {
-	color: #E50914;
+	color: white;
 	font-weight: 700;
-	text-align: center;
+	text-align: left;
 	letter-spacing: 0.1em;
 }
 .inputBox 
