--- a/SignIn.css
+++ b/SignIn.css
@@ -29,7 +29,7 @@ body
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 0;
+    padding: 2rem 0;
 }
 .logo {
     width: 10.5rem;
@@ -196,24 +196,83 @@ input[type="submit"]:active
 
 @media only screen and (max-width: 1000px){
 
+.logo{
+
+	width: 25rem;
+}
+
 .box {
-	width: 380px;
-	height: 40rem;
+	width: 50rem;
+	height: 80rem;
 	
 }
 .box::before 
 {
 	
-	width: 380px;
-	height: 40rem;
+	width: 50rem;
+	height: 80rem;
 
 }
-.box::after 
+/* .box::after 
 {
 	
-	width: 380px;
-	height: 40rem;
+	width: 35rem;
+	height: 55rem;
 	
+} */
+h2 
+{
+	font-size: 5rem;
 }
-
+.inputBox 
+{
+	position: relative;
+	width: 100%;
+	margin-top: 10rem;
+}
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span 
+{
+	color: white;
+	transform: translateX(0rem) translateY(-8rem);
+	font-size: 3rem;
+}
+.inputBox i 
+{
+	width: 100%;
+	height: .5rem;
+	background: #E50914;
+}
+.inputBox input:valid ~ i,
+.inputBox input:focus ~ i 
+{
+	height: 5rem;
+}
+.inputBox span 
+{
+	position: absolute;
+	left: 0;
+	padding: 0rem 0rem 10rem;
+	pointer-events: none;
+	font-size: 2rem;
+	color: #8f8f8f;
+	letter-spacing: 0.05em;
+	transition: 0.5s;
+}
+.links a 
+{
+	margin: 1.5rem 0;
+	font-size: 1.5rem;
+	color: #8f8f8f;
+	text-decoration: beige;
+}
+input[type="submit"]
+{
+	padding: 1rem 2rem;
+	font-weight: 600;
+	border-radius: 4px;
+	width: 100%;
+	font-size: 2rem;
+	margin-top: .5rem;
+}
 }
