--- a/SignIn.css
+++ b/SignIn.css
@@ -194,7 +194,8 @@ input[type="submit"]:active
 	opacity: 0.8;
 }
 
-@media only screen and (max-width: 1000px){
+@media screen 
+ and (max-device-width: 800px){
 
 .logo{
 
